syntax = "proto3";

package dbInfo;

message db_info {
    string host = 1;
    string database = 2;
    int32 port = 3;
    string username = 4;
    string password = 5;
}