syntax = "proto3";

package deleteInfo;

message delete_info {
    int64 id = 1;
    string name = 2;
}