syntax = "proto3";

package selectInfo;

message select_info {}

message select_result {}