syntax = "proto3";

package updateInfo;

message update_info {}